objects/Industry_Ranking__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Industry Rankings</relationshipLabel>
        <relationshipName>Industry_Rankings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <label>Current</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duplicate_Prevention__c</fullName>
        <description>Used to prevent creating of duplicate records.</description>
        <label>Duplicate Prevention</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <label>Ranking</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Forbes Global 2000</fullName>
                </value>
                <value>
                    <fullName>Fortune 1000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <description>To track and maintain the industry standings for prospect and customers</description>
    <label>Industry Ranking</label>
    <nameField>
        <displayFormat>IR - {0000}</displayFormat>
        <label>Industry Ranking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Industry Rankings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Year_Format_Check</fullName>
        <active>true</active>
        <description>Year should have numbers and length should  be 4.</description>
        <errorConditionFormula>NOT(REGEX(Year__c, '^[0-9]+$'))
||
LEN( Year__c ) &lt;&gt; 4</errorConditionFormula>
        <errorDisplayField>Year__c</errorDisplayField>
        <errorMessage>Please enter valid year in YYYY format</errorMessage>
    </validationRules>
</CustomObject>